made apis for secincharge and scroll bar added for complaint detail

--- a/FusionIIIT/templates/complaintModule/lodgecomplaint_user.html
+++ b/FusionIIIT/templates/complaintModule/lodgecomplaint_user.html
@@ -117,13 +117,15 @@
                 <div class="field">
                     <label>Specific Location<sup><i class="small red asterisk icon"></i></sup></label>
                     <div class="ui large input">
-                        <input placeholder="Room Number, Floor , Block etc." name="specific_location" required>
+                        <!-- <input placeholder="Room Number, Floor , Block etc." name="specific_location" required> -->
+                        <textarea placeholder="Room Number, Floor , Block etc." name="specific_location" required rows="2" cols="20" wrap="hard"></textarea>
+
                     </div>
                 </div>
 
                 <div class="field">
                     <label>Complaint Details<sup><i class="small red asterisk icon"></i></sup></label>
-                    <input placeholder="What is your Complaint?" name="details" required></textarea>
+                    <textarea placeholder="What is your Complaint?" name="details" required rows="2" cols="20" wrap="hard"></textarea>
                 </div>
 
                 <div class = "field">
