--- a/FusionIIIT/templates/complaintModule/complaint_user_detail.html
+++ b/FusionIIIT/templates/complaintModule/complaint_user_detail.html
@@ -92,9 +92,9 @@
                             <div class="eight wide field">
                                 <h3><label><b>Complaint Details :</b></label></h3>
                                     
-                                    <div><i>Complaint ID :</i> {{ comp_id }}<br> 
+                                    <div><i>Complaint ID :</i> {{ comp_id }}<br><br> 
                                         <i>Complaint Details :</i>  <font color="red">{{detail.details }} </font>
-                                    <br>
+                                    <br><br>
                                     <i>Worker Assigned : {{ worker_name }}</i></div>
                                     
                                    
